config_setting(
    name = "aarch64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

cc_binary(
    name = "simd-main",
    srcs = ["simd-main.cc"],
    copts = select({
        "//:aarch64": ["-I/opt/arm/armpl_24.04_gcc/include"],
        "//:x86_64": [],
    }),
    linkopts = select({
        "//:aarch64": [
            "-Wl,-L/opt/arm/armpl_24.04_gcc/lib",
            "-lamath",
        ],
        "//:x86_64": [],
    }),
    deps = ["@google_benchmark//:benchmark"] + select({
        "//:aarch64": [],
        "//:x86_64": ["@intel-mkl"],
    }),
)
